<resources>
    <string name="app_name">Concertix</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome...</string>
    <string name="lets_explore">Let\'s explore</string>
    <string name="your_fun">your fun</string>
    <string name="landing_page_1_bottom_sheet_title">Create your best memory</string>
    <string name="landing_page_1_bottom_sheet_description">We\'re here to make sure you don\'t miss out on any special moments, let\'s make your festival memories fun.</string>
    <string name="landing_page_1_bottom_sheet_button_text">Next</string>

    <string name="landing_page_2_bottom_sheet_title">You can buy tickets easily</string>
    <string name="landing_page_2_bottom_sheet_description">A practical solution to make it easier for you to buy tickets to your favorite music quickly and safely! Enjoy a hassle-free ticketing experience.</string>
    <string name="landing_page_2_bottom_sheet_button_text">Start</string>

    <string name="sign_up_text">Don`t have an account? <font color="#E16539"> Sign Up</font></string>
    <string name="login_text">Already have an account? <font color="#E16539"> Login</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>