<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.landing.LandingPageActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="40dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:text="@string/landing_page_1_bottom_sheet_title"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/landing_page_1_bottom_sheet_description"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="12sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/landing_page_1_bottom_sheet_button_text"
                android:textAllCaps="false"
                android:fontFamily="@font/plus_jakarta_font"
                android:layout_gravity="center"
                android:textStyle="bold"
                app:backgroundTint="@color/orange"
                app:cornerRadius="20dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>