<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="30dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/lets_explore"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_your_fun"/>

    <TextView
        android:id="@+id/tv_your_fun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/your_fun"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="34sp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toEndOf="@id/tv_explore"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_concert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_your_fun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_concert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img_concert_1"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/tv_on_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="Make Memories"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@drawable/shape_rectangle_orange_cornered"
                android:layout_gravity="bottom|center_horizontal"/>

        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/img_singer_1"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/img_singer_1"
        app:layout_constraintTop_toBottomOf="@id/card_concert"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/img_singer_2"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_singer_2"
        app:layout_constraintTop_toBottomOf="@id/card_concert"
        app:layout_constraintStart_toEndOf="@id/img_singer_1"
        app:layout_constraintEnd_toStartOf="@id/img_singer_3"/>

    <ImageView
        android:id="@+id/img_singer_3"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/img_singer_3"
        app:layout_constraintTop_toBottomOf="@id/card_concert"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>